samples/_failures_safe/1761597869_c42b38_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63bc430b.c: In function ‘main’:
./samples/SAFE/__tmp_63bc430b.c:147:16: error: missing terminating " character
  147 |         printf("Correctly rejected
      |                ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_63bc430b.c:147:9: error: expected expression at end of input
  147 |         printf("Correctly rejected
      |         ^~~~~~
./samples/SAFE/__tmp_63bc430b.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_63bc430b.c:147:9: error: expected declaration or statement at end of input
